tests/compiler_errors/fn_tests/generic_fn_redef_stub.tlp
with T fn foo T -> T end

with T fn foo T -> T do end